...
            "noDataYet": "No data yet",
            "noFeedsYet": "No feeds yet",
            "noSleepYet": "No sleep yet",
            "onYourIPhoneToSync": "on your iPhone to sync",
            "openAppToSync": "Open app to sync",
            "openIPhoneAppToRefresh": "Open iPhone app to refresh",
            "openLabel": "Open",
            "openSofiBaby": "Open SofiBaby",
            "pause": "Pause",
            "paused": "Paused",
            "prefixInHours": "%@ in %dh",
            "prefixInHoursMinutes": "%@ in %dh %dm",
            "prefixInMinutes": "%@ in %dm",
...
