appId: com.sofibaby.app
name: Change Language Setting

tags:
  - regression
  - settings

---
- runFlow: ../../helpers/setup-with-baby.yaml
- tapOn:
    id: "settings-button"
- tapOn:
    id: "language-setting"
- tapOn:
    id: "language-sr"
- assertVisible:
    text: "Srpski"
- tapOn:
    id: "language-en"
