appId: com.sofibaby.app
name: Sleep Timer Flow
tags:
  - smoke
  - activities
  - sleep

---
- runFlow: ../../../helpers/setup-with-baby.yaml

- tapOn:
    id: "sleep-card"

- assertVisible:
    id: "sleep-screen"

- tapOn:
    id: "start-sleep-button"

- extendedWaitUntil:
    visible:
      id: "stop-timer-button"
    timeout: 3000

- tapOn:
    id: "stop-timer-button"

- extendedWaitUntil:
    visible:
      id: "home-screen"
    timeout: 15000
